codegen/tests/ui/missing-return.stderr
error: shuttle_service::main functions need to return a service
 --> tests/ui/missing-return.rs:2:1
  |
2 | async fn missing_return() {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: See the docs for services with first class support
  = note: https://docs.rs/shuttle-service/latest/shuttle_service/attr.main.html#shuttle-supported-services

error[E0433]: failed to resolve: use of undeclared crate or module `shuttle_service`
 --> tests/ui/missing-return.rs:1:1
  |
1 | #[shuttle_codegen::main]
  | ^^^^^^^^^^^^^^^^^^^^^^^^ use of undeclared crate or module `shuttle_service`
  |
  = note: this error originates in the attribute macro `shuttle_codegen::main` (in Nightly builds, run with -Z macro-backtrace for more info)
